Stability section adjusted (m=1 example removed, more comments/explanation added)

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -430,53 +430,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 513,
-   "id": "4183b89d",
+   "cell_type": "markdown",
+   "id": "3a1c05e4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11-element Vector{ComplexF64}:\n",
-       " -23.185760980826743 - 12.259944263586952im\n",
-       " -23.185760980826743 + 12.259944263586952im\n",
-       "  -5.884891262284991 - 20.7371415461934im\n",
-       "  -5.884891262284991 + 20.7371415461934im\n",
-       "  -2.575452956702816 - 17.1633286633441im\n",
-       "  -2.575452956702816 + 17.1633286633441im\n",
-       " -1.4048098436244374 - 10.686268035104519im\n",
-       " -1.4048098436244374 + 10.686268035104519im\n",
-       " -0.5883172279567646 - 4.155304706787289im\n",
-       " -0.5883172279567646 + 4.155304706787289im\n",
-       "  2.2784645427915486 + 0.0im"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "using LinearAlgebra\n",
-    "#For m=1\n",
-    "taumaxtrial1=1 #trial 1 with a delay of tau=1 \n",
-    "#for more than one delay, take tau max to be largest delay \n",
-    "N=10\n",
-    "tjvals=reverse((-taumaxtrial1/2)*(cos.(pi*(0:N)'/N)[:].+1))\n",
-    "ljvals=j_eval(tjvals,[0,-taumaxtrial1])\n",
-    "#tjvals2=(-2/2)*(cos.(pi*(0:N)'/N)[:].+1)\n",
-    "Dtrial1=j_eval(tjvals,[0,-taumaxtrial1],diff=1)\n",
-    "stabmatrixAtrial1=fill(NaN,N+1,N+1)\n",
-    "stabmatrixAtrial1[2:end,:]=Dtrial1[2:end,:]\n",
-    "\n",
-    "a=2\n",
-    "b=exp(1) #b=e\n",
-    "\n",
-    "#stabmatrixAtrial1[1,:]=a*(ljvals[1,:])+b*(ljvals[2,:])\n",
-    "for j in 1:N+1\n",
-    "    stabmatrixAtrial1[1,j]=a*(ljvals[1,j])+b*(ljvals[2,j])\n",
-    "end \n",
-    "eigvals(stabmatrixAtrial1) #doesn't match that given in Breda source"
+    "The stability of an equilibrium point can be found using barycentric interpolation. This stability finding method is used in ```stab_func_bi```. Below is an broken-down example for a linearised 2D system to aid understanding of how the inner working of ```stab_func_bi``` work. "
    ]
   },
   {
