--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -431,88 +431,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a1c05e4",
-   "metadata": {},
-   "source": [
-    "The stability of an equilibrium point can be found using barycentric interpolation. This stability finding method is used in ```stab_func_bi```. Below is an broken-down example for a linearised 2D system to aid understanding of how the inner working of ```stab_func_bi``` work. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 514,
-   "id": "451b5a19",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30-element Vector{ComplexF64}:\n",
-       " -125.55396986482523 + 0.0im\n",
-       "  -79.83209089129548 - 77.32512676216008im\n",
-       "  -79.83209089129548 + 77.32512676216008im\n",
-       "  -65.43342929419491 + 0.0im\n",
-       "  -61.55778707889961 - 24.569767314589292im\n",
-       "  -61.55778707889961 + 24.569767314589292im\n",
-       " -49.034877932505765 - 48.30752547082575im\n",
-       " -49.034877932505765 + 48.30752547082575im\n",
-       " -26.736973488773287 - 118.65873866588186im\n",
-       " -26.736973488773287 + 118.65873866588186im\n",
-       "                     ⋮\n",
-       " -10.400919541541283 + 38.92741649498601im\n",
-       "  -9.900527931335066 - 69.86917824530187im\n",
-       "  -9.900527931335066 + 69.86917824530187im\n",
-       "  -9.345070452991889 - 25.570711320019164im\n",
-       "  -9.345070452991889 + 25.570711320019164im\n",
-       " -5.0567792803906695 - 4.026235533850058im\n",
-       " -5.0567792803906695 + 4.026235533850058im\n",
-       " -1.3352684760607727 - 9.119483347402427im\n",
-       " -1.3352684760607727 + 9.119483347402427im"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "###For m=2 with 2 delays tau1 and tau2\n",
-    "m=2\n",
-    "Id2=Matrix{Float64}(I,2,2)\n",
-    "\n",
-    "tau1=0.2\n",
-    "tau2=0.3\n",
-    "taumaxtrial2=0.3\n",
-    "N2=14\n",
-    "\n",
-    "tjvals2=reverse((-taumaxtrial2/2)*(cos.(pi*(0:N2)'/N2)[:].+1))\n",
-    "ljvals2=j_eval(tjvals2,[0,-tau1,-tau2])\n",
-    "Dtrial2=j_eval(tjvals2,[0,-taumaxtrial2],diff=1)\n",
-    "stabmatrixAtrial2=fill(NaN,m*(N2+1),m*(N2+1))\n",
-    "mD2mat=fill(NaN,m*N2,m*(N2+1))\n",
-    "for i in 2:N2+1\n",
-    "    for j in 1:N2+1\n",
-    "        mD2mat[2*i-3:2*i-2,2*j-1:2*j]=Id2*Dtrial2[i,j]\n",
-    "    end \n",
-    "end \n",
-    "\n",
-    "stabmatrixAtrial2[m+1:end,1:end]=mD2mat\n",
-    "\n",
-    "M1=[-6.45 -12.1; 1.5 -0.45]\n",
-    "M2=[-6 0; 1 0]\n",
-    "M3=[0 4; 0 -2]\n",
-    "\n",
-    "for j in 1:N2+1\n",
-    "    stabmatrixAtrial2[1:m,2*j-1:2*j]=M1*(ljvals2[1,j]*Id2)+M2*(ljvals2[2,j]*Id2)+M3*(ljvals2[3,j]*Id2) #indices would change for different m (m!=0)\n",
-    "end \n",
-    "\n",
-    "eigvals(stabmatrixAtrial2) #rightmost eigenvalue matches the one in Breda source!!!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "dcf90748",
    "metadata": {},
    "source": [
-    "The function ```stab_func_bi``` uses barycentric interpolation to find the stability and the rightmost eigenvalue of an equilibrium point. Below is an example for a delay differential equation system that models the interaction between two neurons. A more indepth look at this system can be found in the Neuron_example demo but it's system is given by:\n",
+    "The stability of an equilibrium point can be found using barycentric interpolation. The function ```stab_func_bi``` uses barycentric interpolation to find the stability and the rightmost eigenvalue of an equilibrium point. Below is an example for a delay differential equation system that models the interaction between two neurons. A more indepth look at this system can be found in the Neuron_example demo but it's system is given by:\n",
     "```math\n",
     "\\begin{align}\n",
     "  \\dot{x}_1&= -\\kappa x_1(t) + \\beta \\tanh(x_1(t-\\tau_s)) + a_{12} \\tanh(x_2(t-\\tau_2))\\\\\n",
@@ -680,6 +602,54 @@
     "x_hopf=yh1[1:2]\n",
     "println(\"The ω value for hopf bifurcation: $om_hopf\")\n",
     "println(\"The a21 value for hopf bifurcation: $a_hopf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b8b2a99",
+   "metadata": {},
+   "source": [
+    "Below is an broken-down example for a linearised 2D system to aid understanding of how the inner working of ```stab_func_bi``` work. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32096236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###For m=2 with 2 delays tau1 and tau2\n",
+    "m=2\n",
+    "Id2=Matrix{Float64}(I,2,2)\n",
+    "\n",
+    "tau1=0.2\n",
+    "tau2=0.3\n",
+    "taumaxtrial2=0.3\n",
+    "N2=14\n",
+    "\n",
+    "tjvals2=reverse((-taumaxtrial2/2)*(cos.(pi*(0:N2)'/N2)[:].+1))\n",
+    "ljvals2=j_eval(tjvals2,[0,-tau1,-tau2])\n",
+    "Dtrial2=j_eval(tjvals2,[0,-taumaxtrial2],diff=1)\n",
+    "stabmatrixAtrial2=fill(NaN,m*(N2+1),m*(N2+1))\n",
+    "mD2mat=fill(NaN,m*N2,m*(N2+1))\n",
+    "for i in 2:N2+1\n",
+    "    for j in 1:N2+1\n",
+    "        mD2mat[2*i-3:2*i-2,2*j-1:2*j]=Id2*Dtrial2[i,j]\n",
+    "    end \n",
+    "end \n",
+    "\n",
+    "stabmatrixAtrial2[m+1:end,1:end]=mD2mat\n",
+    "\n",
+    "M1=[-6.45 -12.1; 1.5 -0.45]\n",
+    "M2=[-6 0; 1 0]\n",
+    "M3=[0 4; 0 -2]\n",
+    "\n",
+    "for j in 1:N2+1\n",
+    "    stabmatrixAtrial2[1:m,2*j-1:2*j]=M1*(ljvals2[1,j]*Id2)+M2*(ljvals2[2,j]*Id2)+M3*(ljvals2[3,j]*Id2) #indices would change for different m (m!=0)\n",
+    "end \n",
+    "\n",
+    "eigvals(stabmatrixAtrial2) #rightmost eigenvalue matches the one in Breda source!!!"
    ]
   },
   {
