Added comments to check back later

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -609,7 +609,9 @@
    "id": "6b8b2a99",
    "metadata": {},
    "source": [
-    "Below is an broken-down example for a linearised 2D system to aid understanding of how the inner working of ```stab_func_bi``` work. "
+    "Below is an broken-down example for a linearised 2D system to aid understanding of how the inner working of ```stab_func_bi``` work. \n",
+    "\n",
+    "ANNOTATE AND COMMENT ON THE CODE BELOW!!!!!!!"
    ]
   },
   {
