Reran with altered code

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 43,
    "id": "a76dd517",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 44,
    "id": "ce429145",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 45,
    "id": "c4ba9f04",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 46,
    "id": "ee242ee7",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 47,
    "id": "d85898e9",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 48,
    "id": "189d7837",
    "metadata": {},
    "outputs": [
@@ -222,6 +222,7 @@
     }
    ],
    "source": [
+    "include(\"binter_example.jl\")\n",
     "n=200 #so we have 201 interpolation/Chebyshev points\n",
     "xjvals=cos.(pi*(0:n)'/n)[:] \n",
     "xivals2=[-0.99:0.02:0.99;]\n",
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 49,
    "id": "616fdae5",
    "metadata": {},
    "outputs": [
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 50,
    "id": "9c2e66bf",
    "metadata": {},
    "outputs": [
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 51,
    "id": "335a471e",
    "metadata": {},
    "outputs": [
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "c60bfb69",
    "metadata": {},
    "outputs": [
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 53,
    "id": "f0bfe6f9",
    "metadata": {},
    "outputs": [
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 54,
    "id": "83db749e",
    "metadata": {},
    "outputs": [
@@ -396,25 +397,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "1c718608",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5-element Vector{Float64}:\n",
-       " -44878.473201488654\n",
-       "   6820.426465186807\n",
-       "   1704.8964773449432\n",
-       "    757.5763803684644\n",
-       "    426.01466669450417"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#diff2mat=j_eval(xjvals,xivals,diff=2) #E matrix of lj(xi) components\n",
     "#df2xivals=diff2mat*fvec#uses barycentric interpolation formula to find p(xivals)\n",
@@ -445,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 56,
    "id": "25d493e8",
    "metadata": {},
    "outputs": [
@@ -486,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 57,
    "id": "af703dbb",
    "metadata": {},
    "outputs": [],
@@ -513,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 58,
    "id": "cace5d36",
    "metadata": {},
    "outputs": [
@@ -551,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 59,
    "id": "3a787d2f",
    "metadata": {},
    "outputs": [
@@ -572,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 60,
    "id": "990c42d7",
    "metadata": {},
    "outputs": [
@@ -616,10 +602,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "32096236",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30-element Vector{ComplexF64}:\n",
+       " -125.55396986482523 + 0.0im\n",
+       "  -79.83209089129548 - 77.32512676216008im\n",
+       "  -79.83209089129548 + 77.32512676216008im\n",
+       "  -65.43342929419491 + 0.0im\n",
+       "  -61.55778707889961 - 24.569767314589292im\n",
+       "  -61.55778707889961 + 24.569767314589292im\n",
+       " -49.034877932505765 - 48.30752547082575im\n",
+       " -49.034877932505765 + 48.30752547082575im\n",
+       " -26.736973488773287 - 118.65873866588186im\n",
+       " -26.736973488773287 + 118.65873866588186im\n",
+       "                     ⋮\n",
+       " -10.400919541541283 + 38.92741649498601im\n",
+       "  -9.900527931335066 - 69.86917824530187im\n",
+       "  -9.900527931335066 + 69.86917824530187im\n",
+       "  -9.345070452991889 - 25.570711320019164im\n",
+       "  -9.345070452991889 + 25.570711320019164im\n",
+       " -5.0567792803906695 - 4.026235533850058im\n",
+       " -5.0567792803906695 + 4.026235533850058im\n",
+       " -1.3352684760607727 - 9.119483347402427im\n",
+       " -1.3352684760607727 + 9.119483347402427im"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "###For m=2 with 2 delays tau1 and tau2\n",
     "m=2\n",
@@ -692,10 +708,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "e7866008",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Float64}:\n",
+       " 2.2500000000000004"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#for basic functio f(x,y)=x+y, where we want to find f(0.25,2)\n",
     "include(\"j_eval_multidim.jl\")\n",
@@ -705,10 +732,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "63633f8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.25"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#check it against true answer\n",
     "include(\"basic_func.jl\")\n",
