Changed names of some shared functions

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -53,17 +53,17 @@
     "include(\"mackeyglassfunc.jl\") #system of Mackey-Glass equation\n",
     "include(\"mackeytau.jl\") #Delay forumla for Mackey-Glass equation\n",
     "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"../shared/jacobian_new.jl\") #Jacobian function\n",
-    "include(\"../shared/newton_new.jl\") #Newton function\n",
+    "include(\"../shared/jacobian.jl\") #Jacobian function\n",
+    "include(\"../shared/newton.jl\") #Newton function\n",
     "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
+    "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to find the stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "be5d4b96",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
     "nd=1 #one delay\n",
     "\n",
     "y01,feq=create_ststfunc(mackeyglassfunc, x0, [beta,gamma,n,tau],nd, par_indx=4) #finds initial equilibrium point and creates a function to find the equilibria branch\n",
-    "ylist1,ytan1=track_curve_new(feq,y01,[0.0,1],stepsize=0.01,nmax=100) #tracks equilibria to find the equilibria branch\n",
+    "ylist1,ytan1=track_curve(feq,y01,[0.0,1],stepsize=0.01,nmax=100) #tracks equilibria to find the equilibria branch\n",
     "\n",
     "#Below plots the equilibiria branch\n",
     "fig1=Figure()\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "514a1fb6",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
    "source": [
     "yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton_new(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh1,conv1,=newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "tau_hopf=yh1[end]\n",
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "9b51b5f4",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
    "source": [
     "yh02,fhopf2=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd,stabtype=\"bi\",N_num=20) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh02\")\n",
-    "yh2,conv2,=newton_new(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh2,conv2,=newton(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh2\")\n",
     "println(\"converged?: $conv2\")\n",
     "tau_2hopf=yh2[end]\n",
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
@@ -502,8 +502,8 @@
    "source": [
     "yheq01,fhopfeq1=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau_hopf],[x_hopf],[beta,tau_hopf],[1,4],nd)\n",
     "\n",
-    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,-1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau≈0.47 #chnage one to 1, -1\n",
-    "yheqlist2,heqtan2=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,1,1],nmax=500) #tracks beta and tau forwards from beta=2, tau≈0.47\n",
+    "yheqlist1,heqtan1=track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,-1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau≈0.47 #chnage one to 1, -1\n",
+    "yheqlist2,heqtan2=track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,1,1],nmax=500) #tracks beta and tau forwards from beta=2, tau≈0.47\n",
     "\n",
     "#Plot of continuation/tracking in (a,b) plane\n",
     "fig4=Figure()\n",
