--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "a584c15a",
    "metadata": {},
    "outputs": [
@@ -53,10 +53,10 @@
     "include(\"neuronfunc.jl\") #system of neuron example\n",
     "include(\"neurontau.jl\") #Delay forumla for neuron example\n",
     "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"../shared/jacobian_new.jl\") #Jacobian function\n",
-    "include(\"../shared/newton_new.jl\") #Newton function\n",
+    "include(\"../shared/jacobian.jl\") #Jacobian function\n",
+    "include(\"../shared/newton.jl\") #Newton function\n",
     "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
+    "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func_matrix.jl\")#uses large matrix method to find stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\")#finds initial guess for Hopf information and creates a function that can find the true Hopf values"
    ]
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "a1951fbd",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
    ],
    "source": [
     "y02,feq2=create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4) #we set a21 to 0 and finding starting point for equilibria branching\n",
-    "alist1,ytan1=track_curve_new(feq2,y02,[0.0,0,1],nmax=550)#tracks equilibria to give equilibria branch\n",
+    "alist1,ytan1=track_curve(feq2,y02,[0.0,0,1],nmax=550)#tracks equilibria to give equilibria branch\n",
     "\n",
     "xmat1=hcat([u[1] for u in alist1],[u[2] for u in alist1]) #finds the values of x1 and x2 for the equilibria\n",
     "xlist1=[xmat1[i,:] for i in 1:size(xmat1,1)] #creates a vector of vectors of all the equilibria points\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "b3c85975",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
    "source": [
     "yh01,fhopf=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and a21 estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton_new(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh1,conv1,=newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "a_hopf=yh1[end]\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "70e74113",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
    "source": [
     "yh02,fhopf2=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd,stabtype=\"bi\",N_num=20) #outputs initial guess of the Hopf bifurcation (including x, ω and a21 estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh02\")\n",
-    "yh2,conv2,=newton_new(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh2,conv2,=newton(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh2\")\n",
     "println(\"converged?: $conv2\")\n",
     "a_2hopf=yh2[end]\n",
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
    ],
    "source": [
     "yheq01,fhopfeq1=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,a_hopf,tau1,tau2,taus],x_hopf,[a_hopf,taus],[4,7],nd) #initialises hopf function and initial guess for a21≈0.8 and tau_s=1.5\n",
-    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,1,-1],nmax=1250) #tracks a21 and tau_s over (a21, tau_s) plane\n",
+    "yheqlist1,heqtan1=track_curve(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,1,-1],nmax=1250) #tracks a21 and tau_s over (a21, tau_s) plane\n",
     "\n",
     "#Plot of continuation/tracking in (a21,tau_s) plane\n",
     "fig7=Figure()\n",
