--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "af26b77b",
    "metadata": {},
    "outputs": [
@@ -61,10 +61,10 @@
     "include(\"invpend_1delay.jl\") #RHS of single delay inverted pendulum example\n",
     "include(\"inpend1tau.jl\") #Delay function for inverted pendulum example\n",
     "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"../shared/jacobian_new.jl\") #Jacobian function\n",
-    "include(\"../shared/newton_new.jl\") #Newton function\n",
+    "include(\"../shared/jacobian.jl\") #Jacobian function\n",
+    "include(\"../shared/newton.jl\") #Newton function\n",
     "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
+    "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to find the stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
     "include(\"../shared/create_foldfunc.jl\") #finds initial guess for fold information and creates a function that can find the true fold values"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "fb745fe6",
    "metadata": {},
    "outputs": [
@@ -113,9 +113,9 @@
     "y01,f_equ=create_ststfunc(invpend_1delay,[0.0,0],[a,b,tau],nd,par_indx=1) #pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
     "#The above ouputs the initial guess for x,v and parameter 'a' and the equilibrium function\n",
     "\n",
-    "ylist1,ytan1=track_curve_new(f_equ,y01,[0.0,0,1],nmax=1000) #initial tangent changes a (initial tangent=[0.0,0,1])\n",
-    "ylist2,ytan2=track_curve_new(f_equ,y01,[1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in postive x direction\n",
-    "ylist3,ytan3=track_curve_new(f_equ,y01,[-1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in negative x direction\n",
+    "ylist1,ytan1=track_curve(f_equ,y01,[0.0,0,1],nmax=1000) #initial tangent changes a (initial tangent=[0.0,0,1])\n",
+    "ylist2,ytan2=track_curve(f_equ,y01,[1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in postive x direction\n",
+    "ylist3,ytan3=track_curve(f_equ,y01,[-1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in negative x direction\n",
     "\n",
     "#Below plots the equilibria branches\n",
     "fig1=Figure()\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
    "source": [
     "yh01,fhopf=create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_indx],[plist[hopf_indx]],[1],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and a estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton_new(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh1,conv1,=newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "a_hopf=yh1[end]\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "f0adaab9",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
    "source": [
     "yh02,fhopf2=create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_biindx],[plist[hopf_biindx]],[1],nd,stabtype=\"bi\",N_num=20) #outputs initial guess of the Hopf bifurcation (including x, ω and a estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh02\")\n",
-    "yh2,conv2,=newton_new(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh2,conv2,=newton(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh2\")\n",
     "println(\"converged?: $conv2\")\n",
     "a_2hopf=yh2[end]\n",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "82d4c7ef",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
    ],
    "source": [
     "y0f1,ffold1=create_foldfunc(invpend_1delay,inpend1tau,[a,b,tau],[0.0,0],[1.4],[1],1) #returns initial guess for the fold parameters and a function that contains the formula for finding a fold\n",
-    "yff1,convf1,=newton_new(ffold1,y0f1) #finds value of a for fold for fixed b=1.5\n",
+    "yff1,convf1,=newton(ffold1,y0f1) #finds value of a for fold for fixed b=1.5\n",
     "\n",
     "a_fold=yff1[end]\n",
     "x_fold=yff1[1]\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "db6b861b",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
    ],
    "source": [
     "y0f2,ffold2=create_foldfunc(invpend_1delay,inpend1tau,[a,b,tau],[0.0,0],[1.4],[1],1,stabtype=\"bi\",N_num=20) #returns initial guess for the fold parameters and a function that contains the formula for finding a fold\n",
-    "yff2,convf2,=newton_new(ffold2,y0f2) #finds value of a for fold for fixed b=1.5\n",
+    "yff2,convf2,=newton(ffold2,y0f2) #finds value of a for fold for fixed b=1.5\n",
     "\n",
     "a_2fold=yff2[end]\n",
     "x_2fold=yff2[1]\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
    ],
    "source": [
     "yheq01,fhopfeq1=create_hopffunc(invpend_1delay,inpend1tau,[a_hopf,0,tau],[0.0,0],[a_hopf,0],[1,2],nd) #initialises hopf function and initial guess for a≈3.59 and b=0\n",
-    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,-1,-1],nmax=2000) #tracks over a and b plane\n",
+    "yheqlist1,heqtan1=track_curve(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,-1,-1],nmax=2000) #tracks over a and b plane\n",
     "\n",
     "#Below marks the Hopf bifurcation for fixed b=1.5\n",
     "a_vals=[u[end-1] for u in yheqlist1]\n",
