--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -262,20 +262,20 @@
    "id": "a4be1d00",
    "metadata": {},
    "source": [
-    "# Stability using barycentric interpolation"
+    "# Stability using Breda et al (2009) method"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b90349d8",
+   "id": "a9034871",
    "metadata": {},
    "source": [
-    "The function ```stab_func_bi``` uses barycentric interpolation to find the stability and the rightmost eigenvalue of an equilibrium point."
+    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and eigenvectors if asked) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook. To do use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1,A_2, A_3$ need to be found for the equilibrium point(s). These matrcies can be found manually (if possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` to easily loop over all equilibrium points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "669aa48b",
    "metadata": {},
    "outputs": [
@@ -291,27 +291,35 @@
     }
    ],
    "source": [
-    "include(\"../stab_func_bi.jl\")\n",
+    "include(\"../stab_func_DDE.jl\")\n",
     "include(\"../j_eval.jl\")\n",
-    "#include(\"../shared/stab_func_bi.jl\")\n",
+    "include(\"../j_diff.jl\")\n",
+    "#include(\"../shared/stab_func_DDE.jl\")\n",
     "#include(\"../shared/j_eval.jl\")\n",
+    "#include(\"../shared/j_diff.jl\")\n",
     "\n",
+    "N=30\n",
     "neq=length(plist1) #number of equilibrium points we're finding the stability of\n",
-    "stab_bi=fill(NaN,neq)\n",
-    "lamr1=fill(0.0+0.0*im,neq)\n",
+    "stab_DDE=fill(NaN,neq)\n",
+    "#lamr1=fill(0.0+0.0*im,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab_bi[i],lamr1[i],=stab_func_bi(neuronfunc,neurontau,[k,beta,a12,plist1[i],tau1,tau2,taus],xlist1[i],nd,20) #outputs the stability (1 for stable, 0 for unstable) and also gives the rightmost eigenvalue for each equilibrium point\n",
+    "    #stab_bi[i],lamr1[i],=stab_func_bi(neuronfunc,neurontau,[k,beta,a12,plist1[i],tau1,tau2,taus],xlist1[i],nd,20) #outputs the stability (1 for stable, 0 for unstable) and also gives the rightmost eigenvalue for each equilibrium point\n",
+    "    A0=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=1)\n",
+    "    A1=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=2)\n",
+    "    A2=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=3)\n",
+    "    A3=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=4)\n",
+    "    stab_DDE[i],=stab_func_DDE([A0,A1,A2,A3],[tau1,tau2,taus],N)\n",
     "end\n",
     "\n",
-    "stablebi=(stab_bi.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
-    "unstablebi=(stab_bi.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
+    "stableDDE=(stab_DDE.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
+    "unstableDDE=(stab_DDE.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
     "\n",
     "#Below plots the equilibria and shows their stability\n",
     "fig5=Figure()\n",
     "ax5=Axis(fig5[1,1],xlabel=\"a₂₁\",ylabel=\"x\")\n",
-    "scatter!(ax5,plist1[stablebi],[u[1] for u in xlist1[stablebi]],label=\"stable\",color=\"green\")\n",
-    "scatter!(ax5,plist1[unstablebi],[u[1] for u in xlist1[unstablebi]],label=\"unstable\",color=\"red\")\n",
+    "scatter!(ax5,plist1[stableDDE],[u[1] for u in xlist1[stableDDE]],label=\"stable\",color=\"green\")\n",
+    "scatter!(ax5,plist1[unstableDDE],[u[1] for u in xlist1[unstableDDE]],label=\"unstable\",color=\"red\")\n",
     "Legend(fig5[1,2], ax5, merge=true)\n",
     "fig5"
    ]
