--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -598,6 +598,23 @@
     "ax7.yticks=1:1:11 #creates y-axs increments that match those given in DDE-Biftool\n",
     "fig7"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8256980",
+   "metadata": {},
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "628565e5",
+   "metadata": {},
+   "source": [
+    "1. D. Breada, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis\n",
+    "and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+   ]
   }
  ],
  "metadata": {
