Added function at start

--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -58,7 +58,13 @@
     "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
     "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func_matrix.jl\")#uses large matrix method to find stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
-    "include(\"../shared/create_hopffunc.jl\")#finds initial guess for Hopf information and creates a function that can find the true Hopf values"
+    "include(\"../shared/create_hopffunc.jl\")#finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
+    "include(\"../stab_func_DDE.jl\")\n",
+    "include(\"../j_eval.jl\")\n",
+    "include(\"../j_diff.jl\")\n",
+    "#include(\"../shared/stab_func_DDE.jl\")\n",
+    "#include(\"../shared/j_eval.jl\")\n",
+    "#include(\"../shared/j_diff.jl\")"
    ]
   },
   {
@@ -291,13 +297,6 @@
     }
    ],
    "source": [
-    "include(\"../stab_func_DDE.jl\")\n",
-    "include(\"../j_eval.jl\")\n",
-    "include(\"../j_diff.jl\")\n",
-    "#include(\"../shared/stab_func_DDE.jl\")\n",
-    "#include(\"../shared/j_eval.jl\")\n",
-    "#include(\"../shared/j_diff.jl\")\n",
-    "\n",
     "N=30\n",
     "neq=length(plist1) #number of equilibrium points we're finding the stability of\n",
     "stab_DDE=fill(NaN,neq)\n",
