Changed stab_func_bi to stab_func_DDE

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -58,7 +58,13 @@
     "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
     "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to find the stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
-    "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
+    "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
+    "include(\"../stab_func_DDE.jl\")\n",
+    "include(\"../j_eval.jl\")\n",
+    "include(\"../j_diff.jl\")\n",
+    "#include(\"../shared/stab_func_DDE.jl\")\n",
+    "#include(\"../shared/j_eval.jl\")\n",
+    "#include(\"../shared/j_diff.jl\")"
    ]
   },
   {
@@ -215,7 +221,7 @@
    "id": "77693dc5",
    "metadata": {},
    "source": [
-    "# Stability using barycentric interpolation"
+    "# Stability using Breda et al (2009) method"
    ]
   },
   {
@@ -223,12 +229,12 @@
    "id": "b9947f22",
    "metadata": {},
    "source": [
-    "The function ```stab_func_bi``` uses barycentric interpolation to find the stability and the rightmost eigenvalue of an equilibrium point."
+    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and eigenvectors if asked) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook. To do use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1$ need to be found for x=1 (equilibrium point). These can be found manually (if  possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` to easily loop over all equilibrium points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "955dd959",
    "metadata": {},
    "outputs": [
@@ -244,27 +250,27 @@
     }
    ],
    "source": [
-    "include(\"../stab_func_bi.jl\")\n",
-    "include(\"../j_eval.jl\")\n",
-    "#include(\"../shared/stab_func_bi.jl\")\n",
-    "#include(\"../shared/j_eval.jl\")\n",
-    "\n",
+    "n=1 #one dimensional\n",
+    "N=150 #so there are 151 interpolation points\n",
     "neq=length(plist1) #number of equilibrium points we're finding the stability of\n",
-    "stab_bi=fill(NaN,neq)\n",
-    "lamr1=fill(0.0+0.0*im,neq)\n",
+    "stab_DDE=fill(NaN,neq)\n",
+    "#eigvals1=[fill(0.0+0.0*im,n*(1+nd*N)) for _ in 1:neq]\n",
+    "#lamr1=fill(0.0+0.0*im,neq)\n",
     "\n",
     "for i in 2:neq\n",
-    "    stab_bi[i],lamr1[i],=stab_func_bi(mackeyglassfunc,mackeytau,[beta, gamma,n,plist1[i]],xlist1[i],nd,20) #outputs the stability (1 for stable, 0 for unstable) and also gives the rightmost eigenvalue for each equilibrium point\n",
+    "    A0=f_deriv(mackeyglassfunc, xlist[i],[beta, gamma,n,plist[i]],nd,nx=1)\n",
+    "    A1=f_deriv(mackeyglassfunc, xlist[i],[beta, gamma,n,plist[i]],nd,nx=2)\n",
+    "    stab_DDE[i],=stab_func_DDE([A0,A1],[plist[i]],N) #outputs the stability (1 for stable, 0 for unstable) and also gives the rightmost eigenvalue for each equilibrium point\n",
     "end\n",
     "\n",
-    "stablebi=(stab_bi.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
-    "unstablebi=(stab_bi.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
+    "stableDDE=(stab_DDE.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
+    "unstableDDE=(stab_DDE.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
     "\n",
     "#Below plots the equilibria and shows their stability\n",
     "fig5=Figure()\n",
     "ax5=Axis(fig5[1,1],xlabel=\"τ\",ylabel=\"x\")\n",
-    "scatter!(ax5,plist1[stablebi],[u[1] for u in xlist1[stablebi]],label=\"stable\",color=\"green\")\n",
-    "scatter!(ax5,plist1[unstablebi],[u[1] for u in xlist1[unstablebi]],label=\"unstable\",color=\"red\")\n",
+    "scatter!(ax5,plist1[stableDDE],[u[1] for u in xlist1[stableDDE]],label=\"stable\",color=\"green\")\n",
+    "scatter!(ax5,plist1[unstableDDE],[u[1] for u in xlist1[unstableDDE]],label=\"unstable\",color=\"red\")\n",
     "Legend(fig5[1,2], ax5, merge=true)\n",
     "fig5"
    ]
@@ -515,6 +521,23 @@
     "ax4.xticks=1:0.5:5\n",
     "ax4.yticks=0.2:0.2:2.2\n",
     "fig4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d4cf1e7",
+   "metadata": {},
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d9164a",
+   "metadata": {},
+   "source": [
+    "1. D. Breada, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis\n",
+    "and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
    ]
   }
  ],
