--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -67,7 +67,13 @@
     "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to find the stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
-    "include(\"../shared/create_foldfunc.jl\") #finds initial guess for fold information and creates a function that can find the true fold values"
+    "include(\"../shared/create_foldfunc.jl\") #finds initial guess for fold information and creates a function that can find the true fold values\n",
+    "include(\"../stab_func_DDE.jl\")\n",
+    "include(\"../j_eval.jl\")\n",
+    "include(\"../j_diff.jl\")\n",
+    "#include(\"../shared/stab_func_DDE.jl\")\n",
+    "#include(\"../shared/j_eval.jl\")\n",
+    "#include(\"../shared/j_diff.jl\")"
    ]
   },
   {
@@ -225,20 +231,20 @@
    "id": "7393cd96",
    "metadata": {},
    "source": [
-    "# Stability using barycentric interpolation"
+    "# Stability using Breda et al (2009) method"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "49eb3ba1",
+   "id": "a020f28b",
    "metadata": {},
    "source": [
-    "The function ```stab_func_bi``` uses barycentric interpolation to find the stability and the rightmost eigenvalue of an equilibrium point."
+    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and eigenvectors if asked) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook. To do use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1$ need to be found for the equilibrium point(s). These matrcies can be found manually (if possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` to easily loop over all equilibrium points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "d0d84ae2",
    "metadata": {},
    "outputs": [
@@ -254,27 +260,25 @@
     }
    ],
    "source": [
-    "include(\"../stab_func_bi.jl\")\n",
-    "include(\"../j_eval.jl\")\n",
-    "#include(\"../shared/stab_func_bi.jl\")\n",
-    "#include(\"../shared/j_eval.jl\")\n",
-    "\n",
+    "N=50\n",
     "neq=length(plist) #number of equilibrium points we're finding the stability of\n",
-    "stab_bi=fill(NaN,neq)\n",
-    "lam_r=fill(0.0+0.0*im,neq)\n",
+    "stab_DDE=fill(NaN,neq)\n",
+    "#lam_r=fill(0.0+0.0*im,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab_bi[i],lam_r[i]=stab_func_bi(invpend_1delay,inpend1tau,[plist[i],b,tau], xlist[i],nd,20) #returns stability of the equilibiria (Outputs 1 for stable and 0 for unstable)\n",
+    "    A0=f_deriv(invpend_1delay,xlist[i],[plist[i],b,tau],nd,nx=1)\n",
+    "    A1=f_deriv(invpend_1delay,xlist[i],[plist[i],b,tau],nd,nx=2)\n",
+    "    stab_bi[i],=stab_func_DDE([A0,A1],[tau],N)\n",
     "end \n",
     "\n",
-    "stablebi=(stab_bi.==1.0)#highlights indices of stable points (indicated by a 1 in stable vector)\n",
-    "unstablebi=(stab_bi.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
+    "stableDDE=(stab_DDE.==1.0)#highlights indices of stable points (indicated by a 1 in stable vector)\n",
+    "unstableDDE=(stab_DDE.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
     "\n",
     "#Below plots the equilibria and shows their stability\n",
     "fig7=Figure()\n",
     "ax7=Axis(fig7[1,1],xlabel=\"a\",ylabel=\"x\")\n",
-    "scatter!(ax7,plist[stablebi],[u[1] for u in xlist[stablebi]],label=\"stable\",color=\"green\")\n",
-    "scatter!(ax7,plist[unstablebi],[u[1] for u in xlist[unstablebi]],label=\"unstable\",color=\"red\")\n",
+    "scatter!(ax7,plist[stableDDE],[u[1] for u in xlist[stableDDE]],label=\"stable\",color=\"green\")\n",
+    "scatter!(ax7,plist[unstableDDE],[u[1] for u in xlist[unstableDDE]],label=\"unstable\",color=\"red\")\n",
     "Legend(fig7[1,2], ax7, merge=true)\n",
     "fig7"
    ]
@@ -587,6 +591,23 @@
     "vlines!(ax4,1,linestyle=:solid, linewidth=:5,color=:red) #red line represents the fact that a pitchfork bifurcation occurs at a=1 for all b values\n",
     "ylims!(ax4,[0,6])\n",
     "fig4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "113c3029",
+   "metadata": {},
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca96add7",
+   "metadata": {},
+   "source": [
+    "1. D. Breada, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis\n",
+    "and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
    ]
   }
  ],
